productTest: change getFirst to get(0) because of older Java versions compability issues. Coderabbit.